--- a/app/assets/src/scss/components/_bootstrap.scss
+++ b/app/assets/src/scss/components/_bootstrap.scss
@@ -1,10 +1,4 @@
 @import
-    "brand",
-    "burger",
-    "carousels",
-    "cta",
-    "form",
-    "forms",
-    "image",
-    "map",
-    "video";
+    "actions",
+    "holding",
+    "fallback";
